[BUGFIX] Image widths overflowing

--- a/public/app/themes/default/theme.less
+++ b/public/app/themes/default/theme.less
@@ -63,10 +63,6 @@ h1,h2,h3,h4,h5,h6 {
     background: url(/img/bg3.jpg) center center;
     background-size: cover;
   }
-
-  img {
-      width: 100%;
-  }
 }
 
 .sp__ad {
@@ -105,6 +101,9 @@ h1,h2,h3,h4,h5,h6 {
     color: inherit;
     text-decoration: none;
   }
+  img {
+    width: 100%;
+  }
 }
 
 .sp__steam-openid {
@@ -115,8 +114,13 @@ h1,h2,h3,h4,h5,h6 {
   height: 43px;
 }
 
-.sp__news p {
-  font-family: 'Open Sans', Helvetica, sans-serif;
+.sp__news {
+  p {
+    font-family: 'Open Sans', Helvetica, sans-serif;
+  }
+  img {
+    width: 100%;
+  }
 }
 
 .sp__news-ad {
